--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-  <div class="container">  <div id="fist">i m the first</div></div>
+<body onload="startTime()">
+  <div id="txt"></div>
 
- 
-  <script src="script.js"></script>
+ <script src="script.js">
+  
+   
+ </script>
 </body>
 
 </html>
